--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <img src="images/whitelogo.png" alt="loqo" />
+            <a href="/"><img src="images/whitelogo.png" alt="loqo" /></a>
           </div>
           <ul class="nav">
             <li><a href="#">Tour Guides</a></li>
             <li><a href="#">Partners</a></li>
             <li><a href="#">Blogs</a></li>
             <li><a href="#">About Us</a></li>
+            <li class="FAQ"><a href="./faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></li>
           </ul>
         </div>
         <ul class="right-nav">
@@ -420,12 +421,13 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <img src="./images/Logo.png" alt="" />
+              <a href="/"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
-              <a href=""><img src="./images/facebook.png" alt="" /></a>
-              <a href=""><img src="./images/instagram.png" alt="" /></a>
-              <a href=""><img src="./images/youtube.png" alt="" /></a>
+              <a href="" id="fb"><i class="fa-brands fa-square-facebook"></i></a>
+              <a href="" id="insta"><i class="fa-brands fa-instagram"></i></a>
+              <a href="" id="youtube"><i class="fa-brands fa-youtube"></i></a>
+              <a href="" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
             </div>
           </div>
           <div class="foot2">
@@ -440,6 +442,7 @@
             <p><a href="">Shipping</a></p>
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
+            <p class="footerFaq"><a href="./faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></p>
           </div>
           <div class="foot4">
             <h2>Corporate</h2>
@@ -449,9 +452,11 @@
           </div>
         </div>
       </div>
-      <div class="copyright myWrapper">
-        <i class="fa-light fa-copyright"></i>
-        2022 Getguide all rights reserved
+      <div class="myWrapper">
+        <div class="copyright">
+          <i class="fa-light fa-copyright"></i>
+          2022 Getguide all rights reserved
+        </div>
       </div>
     </div>
 
