update and add new pages

--- a/faq.html
+++ b/faq.html
@@ -29,11 +29,16 @@
           <div class="logo">
             <a href="/"><img src="images/Logo.png" alt="loqo" /></a>
           </div>
-          <ul class="main-nav">
-            <li><a href="#">Tour Guides</a></li>
-            <li><a href="#">Partners</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">About Us</a></li>
+          <ul class="main-nav whiteNav">
+            <li><a href="./guides.html">Tour Guides</a></li>
+            <!-- <li><a href="#">Partners</a></li> -->
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li class="FAQ">
+              <a class="active" href="./faq.html"
+                >FAQ <i class="fa-light fa-comments-question"></i
+              ></a>
+            </li>
           </ul>
         </div>
         <div class="main-right-nav">
@@ -46,17 +51,15 @@
         </div>
       </div>
     </div>
-    <section class="faq-hero">
-      <div class="container">
-        <div class="home-faq">
+    <section class="breadcrumbs">
+        <div class="breadcrumb myWrapper">
           <p>Home</p>
           <i class="fa-solid fa-chevron-right"></i>
           <p>FAQ</p>
         </div>
-        <div class="faq-hero-text">
+        <div class="breadcrumbs-text myWrapper">
           <p>FAQ</p>
         </div>
-      </div>
     </section>
     <section class="faq-questions">
       <ul>
