--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <div class="logo">
             <a href="/"><img src="images/whitelogo.png" alt="loqo" /></a>
           </div>
-          <ul class="nav">
-            <li><a href="#">Tour Guides</a></li>
-            <li><a href="#">Partners</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">About Us</a></li>
+          <ul class="nav whiteNav homeNav">
+            <li><a href="./guides.html">Tour Guides</a></li>
+            <!-- <li><a href="#">Partners</a></li> -->
+            <li><a href="/blogs.html">Blogs</a></li>
+            <li><a href="/about.html">About Us</a></li>
             <li class="FAQ"><a href="./faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></li>
           </ul>
         </div>
@@ -271,9 +271,9 @@
             </div>
           </div>
         </div>
-        <div id="all">
+        <div id="all" class="forBtn">
           <a href="guide.html">See All</a
-          ><i class="fa-solid fa-arrow-right"></i>
+          ><i class="fa-solid fa-angle-right"></i>
         </div>
       </div>
     </section>
@@ -389,9 +389,9 @@
         <!-- One Blog End -->
       </div>
       <div class="forBtn">
-        <button id="addBlogs">
-          See All <i class="fa-light fa-chevron-right"></i>
-        </button>
+        <a href="./blogs.html" id="addBlogs">
+          See All <i class="fa-solid fa-angle-right"></i>
+        </a>
       </div>
     </div>
 
