update/login/signup/fix-errors

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="#">Log in</a>
-          <button class="sign"><a href="#">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="sign"><a href="./signup.html">Sign Up</a></button>
         </ul>
       </div>
     </header>
