--- a/blogs.html
+++ b/blogs.html
@@ -40,8 +40,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="#">Log in</a>
-          <button class="main-sign"><a href="#">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
