--- a/guides.html
+++ b/guides.html
@@ -47,8 +47,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="#">Log in</a>
-          <button class="main-sign"><a href="#">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
@@ -373,6 +373,7 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="guidesFilter.js"></script>
   </body>
 </html>
