--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/responsive.css" />
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css"
@@ -21,15 +21,15 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="/"><img src="images/Logo.png" alt="loqo" /></a>
+            <a href="/"><img src="../images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="./guides.html">Tour Guides</a></li>
+            <li><a href="../HTML/guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="./blogs.html">Blogs</a></li>
-            <li><a class="active" href="#">About Us</a></li>
+            <li><a href="../HTML/blogs.html">Blogs</a></li>
+            <li><a class="active" href="../HTML/about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -40,8 +40,10 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="./login.html">Log in</a>
-          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
+          <a href="../HTML/login.html">Log in</a>
+          <button class="main-sign">
+            <a href="../HTML/signup.html">Sign Up</a>
+          </button>
         </div>
       </div>
     </div>
@@ -81,7 +83,7 @@
               <div class="first">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-check"></i> -->
-                  <img src="./images/values/tick.png" alt="" />
+                  <img src="../images/values/tick.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Keyfiyyət</p>
@@ -102,7 +104,7 @@
               <div class="second">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-heart"></i> -->
-                  <img src="./images/values/heart.png" alt="" />
+                  <img src="../images/values/heart.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Müştəri məmnuniyyəti</p>
@@ -119,7 +121,7 @@
               <div class="first">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-lightbulb-on"></i> -->
-                  <img src="./images/values/lamp.png" alt="" />
+                  <img src="../images/values/lamp.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Kreativ yanaşma</p>
@@ -140,7 +142,7 @@
               <div class="second">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-people-group"></i> -->
-                  <img src="./images/values/men.png" alt="" />
+                  <img src="../images/values/men.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Gənclər</p>
@@ -157,7 +159,7 @@
               <div class="first">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-manat-sign"></i> -->
-                  <img src="./images/values/manat.png" alt="" />
+                  <img src="../images/values/manat.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Ən yaxşı qiymətlər</p>
@@ -178,7 +180,7 @@
               <div class="second">
                 <div class="leftSide">
                   <!-- <i class="fa-light fa-gift"></i> -->
-                  <img src="./images/values/gift.png" alt="" />
+                  <img src="../images/values/gift.png" alt="" />
                 </div>
                 <div class="rightSide">
                   <p class="sideHeader">Çoxlu hədiyyələr</p>
@@ -190,10 +192,8 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
-  
       </div>
     </div>
 
@@ -202,7 +202,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="/"><img src="./images/Logo.png" alt="" /></a>
+              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -226,7 +226,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
