--- a/HTML/blogs.html
+++ b/HTML/blogs.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/responsive.css" />
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css"
@@ -21,15 +21,15 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="/"><img src="images/Logo.png" alt="loqo" /></a>
+            <a href="/"><img src="../images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="./guides.html">Tour Guides</a></li>
+            <li><a href="../HTML/guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="/blogs.html" class="active">Blogs</a></li>
-            <li><a href="/about.html">About Us</a></li>
+            <li><a href="../HTML/blogs.html" class="active">Blogs</a></li>
+            <li><a href="../HTML/about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -40,8 +40,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="./login.html">Log in</a>
-          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
+          <a href="../HTML/login.html">Log in</a>
+          <button class="main-sign"><a href="../HTML/signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog1.png" alt="" />
+            <img src="../images/blogs/blog1.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -75,7 +75,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog2.png" alt="" />
+            <img src="../images/blogs/blog2.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -88,7 +88,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -101,7 +101,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog1.png" alt="" />
+            <img src="../images/blogs/blog1.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -114,7 +114,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog2.png" alt="" />
+            <img src="../images/blogs/blog2.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -127,21 +127,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
-          </div>
-          <div class="blogContent">
-            <h1>
-              Help your team transition to remote with this essential guide
-            </h1>
-          </div>
-          <p class="blogDate">31 iyul, 2021</p>
-        </div>
-        <!-- One Blog End -->
-
-        <!-- One Blog  -->
-        <div class="oneBlog">
-          <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -155,7 +141,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -169,7 +155,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -183,7 +169,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -197,7 +183,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -211,7 +197,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -225,7 +211,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -239,7 +225,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -253,7 +239,21 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="./images/blogs/blog3.png" alt="" />
+            <img src="../images/blogs/blog3.png" alt="" />
+          </div>
+          <div class="blogContent">
+            <h1>
+              Help your team transition to remote with this essential guide
+            </h1>
+          </div>
+          <p class="blogDate">31 iyul, 2021</p>
+        </div>
+        <!-- One Blog End -->
+
+        <!-- One Blog  -->
+        <div class="oneBlog">
+          <div class="blogImg">
+            <img src="../images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -286,7 +286,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="/"><img src="./images/Logo.png" alt="" /></a>
+              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -310,7 +310,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
