--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -20,22 +20,22 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/sharp-solid.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
     <div class="main-header">
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="/"><img src="images/Logo.png" alt="loqo" /></a>
+            <a href="/"><img src="../images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="./guides.html">Tour Guides</a></li>
+            <li><a href="../HTML/guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="./blogs.html">Blogs</a></li>
-            <li><a href="./about.html">About Us</a></li>
+            <li><a href="../HTML/blogs.html">Blogs</a></li>
+            <li><a href="../HTML/about.html">About Us</a></li>
             <li class="FAQ">
-              <a class="active" href="./faq.html"
+              <a class="active" href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -46,8 +46,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="./login.html">Log in</a>
-          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
+          <a href="../HTML/login.html">Log in</a>
+          <button class="main-sign"><a href="../HTML/signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="/"><img src="./images/Logo.png" alt="" /></a>
+              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -176,7 +176,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -196,6 +196,6 @@
         </div>
       </div>
     </div>
-    <script src="app.js"></script>
+    <script src="../JS/app.js"></script>
   </body>
 </html>
