--- a/HTML/login.html
+++ b/HTML/login.html
@@ -13,22 +13,24 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/sharp-solid.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
   <body>
     <div class="main-header">
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="/"><img src="images/Logo.png" alt="loqo" /></a>
+            <a href="../HTML/index.html"
+              ><img src="../images/Logo.png" alt="loqo"
+            /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="./guides.html">Tour Guides</a></li>
+            <li><a href="../HTML/guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="/blogs.html">Blogs</a></li>
-            <li><a href="/about.html">About Us</a></li>
+            <li><a href="../HTML/blogs.html">Blogs</a></li>
+            <li><a href="../HTML/about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -39,15 +41,18 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="./login.html">Log in</a>
-          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
+          <a href="../HTML/login.html">Log in</a>
+          <button class="main-sign">
+            <a href="../HTML/signup.html">Sign Up</a>
+          </button>
         </div>
       </div>
     </div>
 
     <div class="signup-container">
-      <div class="signup-heading">
-        <p>Sign up</p>
+      <div class="signup-heading login-heading">
+        <p>Login</p>
+        <p>Hello again!</p>
         <div class="userSelectBtns">
           <button class="guideBtn activeBtn">As Guide</button>
           <button class="companyBtn">As Company</button>
@@ -63,7 +68,7 @@
                 href=""
                 class="one-signup-media"
               >
-                <img src="./images/google.png" />
+                <img src="../images/google.png" />
                 <p>with Google</p>
               </a>
               <a
@@ -71,7 +76,7 @@
                 href="https://www.facebook.com/"
                 class="one-signup-media"
               >
-                <img src="./images/facebook.png" />
+                <img src="../images/facebook.png" />
                 <p>with Facebook</p>
               </a>
             </div>
@@ -83,37 +88,26 @@
             <form>
               <div class="signup-inputs">
                 <div class="signup-input">
-                  <label for="signUpName"><p>Name</p></label>
+                  <label for="loginEmail"><p>Email</p></label>
                   <input
                     type="text"
-                    id="signUpName"
-                    placeholder="Enter your name"
-                  />
-                </div>
-                <div class="signup-input">
-                  <label for="signUpEmail"><p>Email</p></label>
-                  <input
-                    type="text"
-                    id="signUpEmail"
+                    id="loginEmail"
                     placeholder="Enter your email"
                   />
                 </div>
                 <div class="signup-input">
-                  <label for="signUpPass"><p>Password</p></label>
+                  <label for="loginPass"><p>Password</p></label>
                   <input
                     type="password"
-                    id="signUpPass"
+                    id="loginPass"
                     placeholder="Enter your password"
                   />
                 </div>
               </div>
-              <div class="signup-terms">
-                <p>
-                  By signing up, you agree with <a>Terms</a> and
-                  <a href="">Conditions</a>
-                </p>
+              <div class="signup-terms login-forgotPass">
+                <a href="../HTML/forgotPass.html">Forgot password?</a>
               </div>
-              <button class="myBtn">Sign up</button>
+              <button class="myBtn">Log in</button>
             </form>
           </div>
 
@@ -125,7 +119,7 @@
                 href=""
                 class="one-signup-media"
               >
-                <img src="./images/google.png" />
+                <img src="../images/google.png" />
                 <p>with Google</p>
               </a>
               <a
@@ -133,7 +127,7 @@
                 href="https://www.facebook.com/"
                 class="one-signup-media"
               >
-                <img src="./images/facebook.png" />
+                <img src="../images/facebook.png" />
                 <p>with Facebook</p>
               </a>
             </div>
@@ -144,14 +138,6 @@
             </div>
             <form>
               <div class="signup-inputs">
-                <div class="signup-input">
-                  <label for="name"><p>Company Name</p></label>
-                  <input
-                    type="text"
-                    id="name"
-                    placeholder="Enter Company name"
-                  />
-                </div>
                 <div class="signup-input">
                   <label for="email"><p>Company Email</p></label>
                   <input
@@ -169,13 +155,10 @@
                   />
                 </div>
               </div>
-              <div class="signup-terms">
-                <p>
-                  By signing up, you agree with <a>Terms</a> and
-                  <a href="">Conditions</a>
-                </p>
+              <div class="signup-terms login-forgotPass">
+                <a href="../HTML/forgotPass.html">Forgot password?</a>
               </div>
-              <button class="myBtn">Sign Up</button>
+              <button class="myBtn">Log in</button>
             </form>
           </div>
         </div>
@@ -187,7 +170,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="/"><img src="./images/Logo.png" alt="" /></a>
+              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -211,7 +194,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="./faq.html"
+              <a href="../HTML/faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -233,6 +216,6 @@
     </div>
 
     <!-- <script src="app.js"></script> -->
-    <script src="signup.js"></script>
+    <script src="../JS/signup.js"></script>
   </body>
 </html>
