--- a/guideAbout.html
+++ b/guideAbout.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/responsive.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css" />
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css"
@@ -28,15 +28,15 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="../HTML/index.html"><img src="../images/Logo.png" alt="loqo" /></a>
+            <a href="./index.html"><img src="./images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="../HTML/guides.html" class="active">Tour Guides</a></li>
+            <li><a href="./guides.html" class="active">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="../HTML/blogs.html">Blogs</a></li>
-            <li><a href="../HTML/about.html">About Us</a></li>
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -47,15 +47,15 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="../HTML/login.html">Log in</a>
-          <button class="main-sign"><a href="../HTML/signup.html">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
 
     <div class="guideContainer myWrapper">
       <div class="guideImg">
-        <img src="../images/guide.jpg" alt="" />
+        <img src="./images/guide.jpg" alt="" />
       </div>
       <div class="guideInfo">
         <h2>Arben Kola</h2>
@@ -99,7 +99,7 @@
         <!-- One Rview Start  -->
         <div class="oneReview">
           <div class="reviewUser">
-            <img src="../images/user.png" alt="" />
+            <img src="./images/user.png" alt="" />
             <h4>Nazrin Nabiyeva</h4>
           </div>
           <div class="userComment">
@@ -118,7 +118,7 @@
 
         <div class="oneReview">
           <div class="reviewUser">
-            <img src="../images/user.png" alt="" />
+            <img src="./images/user.png" alt="" />
             <h4>Nazrin Nabiyeva</h4>
           </div>
           <div class="userComment">
@@ -140,7 +140,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
+              <a href="./index.html"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -164,7 +164,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -185,6 +185,6 @@
       </div>
     </div>
 
-    <script src="../JS/app.js"></script>
+    <script src="./JS/app.js"></script>
   </body>
 </html>
