--- a/forgotPass.html
+++ b/forgotPass.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/sharp-solid.css"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/sass.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/sass.css" />
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
@@ -26,15 +26,15 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="../HTML/index.html"><img src="../images/Logo.png" alt="loqo" /></a>
+            <a href="./index.html"><img src="./images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="../HTML/guides.html">Tour Guides</a></li>
+            <li><a href="./guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="../HTML/blogs.html">Blogs</a></li>
-            <li><a href="../HTML/about.html">About Us</a></li>
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -45,8 +45,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="../HTML/login.html">Log in</a>
-          <button class="main-sign"><a href="../HTML/signup.html">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
             <div class="line"></div>
   
             <!-- <img src="https://i.imgur.com/YvGc2Tt.png" alt=""> -->
-            <img src="../images/captchaCode.png" alt="">
+            <img src="./images/captchaCode.png" alt="">
 
             <div class="controls">
               <div class="img replay"></div>
@@ -105,7 +105,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
+              <a href="./index.html"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -129,7 +129,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <script src="../JS/recaptcha.js"></script>
+    <script src="./JS/recaptcha.js"></script>
     <!-- <script src="app.js"></script> -->
   </body>
 </html>
