--- a/guides.html
+++ b/guides.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/responsive.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css" />
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css"
@@ -28,15 +28,15 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="../HTML/index.html"><img src="../images/Logo.png" alt="loqo" /></a>
+            <a href="./index.html"><img src="./images/Logo.png" alt="loqo" /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="../HTML/guides.html"  class="active">Tour Guides</a></li>
+            <li><a href="./guides.html"  class="active">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="../HTML/blogs.html">Blogs</a></li>
-            <li><a href="../HTML/about.html">About Us</a></li>
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -47,8 +47,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="../HTML/login.html">Log in</a>
-          <button class="main-sign"><a href="../HTML/signup.html">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="main-sign"><a href="./signup.html">Sign Up</a></button>
         </div>
       </div>
     </div>
@@ -134,9 +134,9 @@
           </div>
         </div>
         <div class="rightSide">
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -153,9 +153,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -172,9 +172,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -191,9 +191,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -210,9 +210,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -229,9 +229,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -248,9 +248,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -267,9 +267,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -286,9 +286,9 @@
               </div>
             </div>
           </a>
-          <a href="../HTML/guideAbout.html" class="one-guide">
+          <a href="./guideAbout.html" class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -328,7 +328,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
+              <a href="./index.html"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -352,7 +352,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -374,6 +374,6 @@
     </div>
 
     <!-- <script src="app.js"></script> -->
-    <script src="../JS/guidesFilter.js"></script>
+    <script src="./JS/guidesFilter.js"></script>
   </body>
 </html>
