--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <link rel="stylesheet" href="../CSS/responsive.css">
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/responsive.css">
     <link
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css"
@@ -22,14 +22,14 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="../HTML/index.html"><img src="../images/whitelogo.png" alt="loqo" /></a>
+            <a href="./index.html"><img src="./images/whitelogo.png" alt="loqo" /></a>
           </div>
           <ul class="nav whiteNav homeNav">
-            <li><a href="../HTML/guides.html">Tour Guides</a></li>
+            <li><a href="./guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="../HTML/blogs.html">Blogs</a></li>
-            <li><a href="../HTML/about.html">About Us</a></li>
-            <li class="FAQ"><a href="../HTML/faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></li>
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li class="FAQ"><a href="./faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></li>
           </ul>
         </div>
         <ul class="right-nav">
@@ -37,8 +37,8 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="../HTML/login.html">Log in</a>
-          <button class="sign"><a href="../HTML/signup.html">Sign Up</a></button>
+          <a href="./login.html">Log in</a>
+          <button class="sign"><a href="./signup.html">Sign Up</a></button>
         </ul>
       </div>
     </header>
@@ -59,7 +59,7 @@
             </div>
           </div>
           <video width="500" height="400" controls>
-            <source src="../videos/testvideo.m4v" type="video/mp4" />
+            <source src="./videos/testvideo.m4v" type="video/mp4" />
           </video>
         </div>
       </div>
@@ -79,9 +79,9 @@
       </div>
       <div class="container">
         <div class="achieves">
-          <img id="line1" src="../images/line1.png" alt="">
-          <img id="line2" src="../images/line2.png" alt="">
-          <img id="line3" src="../images/line3.png" alt="">
+          <img id="line1" src="./images/line1.png" alt="">
+          <img id="line2" src="./images/line2.png" alt="">
+          <img id="line3" src="./images/line3.png" alt="">
           <div class="achieve">
             <!-- <img src="./images/line1.png" alt=""> -->
             <div id="burst-8"></div>
@@ -121,7 +121,7 @@
         <div class="guides">
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -140,7 +140,7 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -158,26 +158,7 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
-            </div>
-            <div class="guide-text">
-              <div class="guide-top-text">
-                <p>Arben Kala</p>
-                <p>
-                  Manage simple to complex projects across multiple teams,
-                  departments
-                </p>
-              </div>
-              <div class="guide-bottom-text">
-                <p>20,99<span>₼</span></p>
-
-                <p>23 Reviews</p>
-              </div>
-            </div>
-          </div>
-          <div class="one-guide">
-            <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -196,7 +177,7 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -215,7 +196,7 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -234,7 +215,7 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -253,7 +234,26 @@
           </div>
           <div class="one-guide">
             <div class="guide-image">
-              <img src="../images/test.webp" />
+              <img src="./images/test.webp" />
+            </div>
+            <div class="guide-text">
+              <div class="guide-top-text">
+                <p>Arben Kala</p>
+                <p>
+                  Manage simple to complex projects across multiple teams,
+                  departments
+                </p>
+              </div>
+              <div class="guide-bottom-text">
+                <p>20,99<span>₼</span></p>
+
+                <p>23 Reviews</p>
+              </div>
+            </div>
+          </div>
+          <div class="one-guide">
+            <div class="guide-image">
+              <img src="./images/test.webp" />
             </div>
             <div class="guide-text">
               <div class="guide-top-text">
@@ -272,7 +272,7 @@
           </div>
         </div>
         <div id="all" class="forBtn">
-          <a href="../HTML/guides.html">See All</a
+          <a href="./guides.html">See All</a
           ><i class="fa-solid fa-angle-right"></i>
         </div>
       </div>
@@ -287,7 +287,7 @@
             <div class="pink-linear">
               <div class="best-video">
                 <video controls>
-                  <source src="../videos/testvideo.m4v" type="video/mp4" />
+                  <source src="./videos/testvideo.m4v" type="video/mp4" />
                 </video>
               </div>
             </div>
@@ -312,7 +312,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog1.png" alt="" />
+            <img src="./images/blogs/blog1.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -325,7 +325,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog2.png" alt="" />
+            <img src="./images/blogs/blog2.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -338,7 +338,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog3.png" alt="" />
+            <img src="./images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -351,7 +351,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog1.png" alt="" />
+            <img src="./images/blogs/blog1.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -364,7 +364,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog2.png" alt="" />
+            <img src="./images/blogs/blog2.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -377,7 +377,7 @@
         <!-- One Blog  -->
         <div class="oneBlog">
           <div class="blogImg">
-            <img src="../images/blogs/blog3.png" alt="" />
+            <img src="./images/blogs/blog3.png" alt="" />
           </div>
           <div class="blogContent">
             <h1>
@@ -389,7 +389,7 @@
         <!-- One Blog End -->
       </div>
       <div class="forBtn">
-        <a href="../HTML/blogs.html" id="addBlogs">
+        <a href="./blogs.html" id="addBlogs">
           See All <i class="fa-solid fa-angle-right"></i>
         </a>
       </div>
@@ -401,7 +401,7 @@
       </div>
       <div class="largestProgramBody">
         <div class="largestBodyImg">
-          <img src="../images/largestProgramBg.png" alt="" />
+          <img src="./images/largestProgramBg.png" alt="" />
           <div class="textBox">
             <h1>The Impact Of The event Marketing</h1>
             <p>
@@ -410,7 +410,7 @@
               load of old.
             </p>
             <button>Create a trip</button>
-            <img class="circle" src="../images/circle.png" alt="" />
+            <img class="circle" src="./images/circle.png" alt="" />
           </div>
         </div>
       </div>
@@ -421,7 +421,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
+              <a href="./index.html"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"><i class="fa-brands fa-square-facebook"></i></a>
@@ -442,7 +442,7 @@
             <p><a href="">Shipping</a></p>
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
-            <p class="footerFaq"><a href="../HTML/faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></p>
+            <p class="footerFaq"><a href="./faq.html">FAQ <i class="fa-light fa-comments-question"></i></a></p>
           </div>
           <div class="foot4">
             <h2>Corporate</h2>
@@ -460,6 +460,6 @@
       </div>
     </div>
 
-    <script src="../JS/app.js"></script>
+    <script src="./JS/app.js"></script>
   </body>
 </html>
