--- a/signup.html
+++ b/signup.html
@@ -13,24 +13,24 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v6.2.1/css/sharp-solid.css"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <div class="main-header">
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="../HTML/index.html"
-              ><img src="../images/Logo.png" alt="loqo"
+            <a href="./index.html"
+              ><img src="./images/Logo.png" alt="loqo"
             /></a>
           </div>
           <ul class="main-nav whiteNav">
-            <li><a href="../HTML/guides.html">Tour Guides</a></li>
+            <li><a href="./guides.html">Tour Guides</a></li>
             <!-- <li><a href="#">Partners</a></li> -->
-            <li><a href="../HTML/blogs.html">Blogs</a></li>
-            <li><a href="../HTML/about.html">About Us</a></li>
+            <li><a href="./blogs.html">Blogs</a></li>
+            <li><a href="./about.html">About Us</a></li>
             <li class="FAQ">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </li>
@@ -41,9 +41,9 @@
             Az
             <i class="fa-solid fa-chevron-down"></i>
           </div>
-          <a href="../HTML/login.html">Log in</a>
+          <a href="./login.html">Log in</a>
           <button class="main-sign">
-            <a href="../HTML/signup.html">Sign Up</a>
+            <a href="./signup.html">Sign Up</a>
           </button>
         </div>
       </div>
@@ -67,7 +67,7 @@
                 href=""
                 class="one-signup-media"
               >
-                <img src="../images/google.png" />
+                <img src="./images/google.png" />
                 <p>with Google</p>
               </a>
               <a
@@ -75,7 +75,7 @@
                 href="https://www.facebook.com/"
                 class="one-signup-media"
               >
-                <img src="../images/facebook.png" />
+                <img src="./images/facebook.png" />
                 <p>with Facebook</p>
               </a>
             </div>
@@ -129,7 +129,7 @@
                 href=""
                 class="one-signup-media"
               >
-                <img src="../images/google.png" />
+                <img src="./images/google.png" />
                 <p>with Google</p>
               </a>
               <a
@@ -137,7 +137,7 @@
                 href="https://www.facebook.com/"
                 class="one-signup-media"
               >
-                <img src="../images/facebook.png" />
+                <img src="./images/facebook.png" />
                 <p>with Facebook</p>
               </a>
             </div>
@@ -191,7 +191,7 @@
         <div class="footer myWrapper">
           <div class="foot1">
             <div class="foot1Logo">
-              <a href="../HTML/index.html"><img src="../images/Logo.png" alt="" /></a>
+              <a href="./index.html"><img src="./images/Logo.png" alt="" /></a>
             </div>
             <div class="foot1Socials">
               <a href="" id="fb"
@@ -215,7 +215,7 @@
             <p><a href="">Track Your Order</a></p>
             <p><a href="">Returns and exchanges</a></p>
             <p class="footerFaq">
-              <a href="../HTML/faq.html"
+              <a href="./faq.html"
                 >FAQ <i class="fa-light fa-comments-question"></i
               ></a>
             </p>
@@ -237,6 +237,6 @@
     </div>
 
     <!-- <script src="app.js"></script> -->
-    <script src="../JS/signup.js"></script>
+    <script src="./JS/signup.js"></script>
   </body>
 </html>
