--- a/bookGuide.html
+++ b/bookGuide.html
@@ -28,7 +28,9 @@
       <div class="total container">
         <div class="left-nav">
           <div class="logo">
-            <a href="./index.html"><img src="./images/Logo.png" alt="loqo" /></a>
+            <a href="./index.html"
+              ><img src="./images/Logo.png" alt="loqo"
+            /></a>
           </div>
           <ul class="main-nav whiteNav">
             <li><a href="./guides.html" class="active">Tour Guides</a></li>
@@ -53,86 +55,77 @@
       </div>
     </div>
 
-    <div class="guideContainer myWrapper">
-      <div class="guideImg">
-        <img src="./images/guide.jpg" alt="" />
-      </div>
-      <div class="guideInfo">
-        <h2>Arben Kola</h2>
-        <p>
-          Nunc amet turpis sit leo vitae mauris. Faucibus eu dolor elit egestas
-          sed viverra. Eget lacus nulla id ut non. Leo ultrices sapien ultrices
-          praesent ullamcorper. Vitae, vel convallis cursus non mi, sit turpis
-          sit integer. Eget netus erat nibh a cursus felis nisl consectetur.
-        </p>
-        <div class="guideAbilities">
-          <div class="languages">
-            <h6>Languages:</h6>
-            <p>English, Spanish, Italian</p>
-          </div>
-          <div class="experience">
-            <h6>Experiences:</h6>
-            <p>Since 2022</p>
-          </div>
-          <div class="activities">
-            <h6>Activities:</h6>
-            <p>History & Culture, Food & Restaurants</p>
-          </div>
-          <div class="locations">
-            <h6>Guide locations:</h6>
-            <p>Albania, Germany</p>
-          </div>
+    <div class="bookPageContainer myWrapper">
+      <div class="bookLeft">
+        <div class="bookLeftImg">
+          <img
+            src="https://images.classic.com/vehicles/89518eb7aa57e6b4c4a08cb4366c7874f36b24da.jpg?auto=format&fit=crop&ar=16:9&w=672&h=576"
+            alt=""
+          />
         </div>
-        <a href="./bookGuide.html" class="myBtn">Book Now</a>
-      </div>
-    </div>
+        <div class="bookLeftContent">
+          <div class="bookLeftContentTop">
+            <div class="contentLeft">
+              <h1>Arben Kola</h1>
+              <div class="bookPgLang">
+                <h4>Languages:</h4>
+                <p>English, Spanish, German</p>
+              </div>
+              <div class="bookPgExp">
+                <h4>Experience:</h4>
+                <p>Since 2022</p>
+              </div>
+              <div class="bookPgLocation">
+                <h4>Guide locations:</h4>
+                <p>Albania, Germany</p>
+              </div>
+            </div>
+            <div class="contentRight">
+              <div class="bookPgPrice">
+                <h2>$36</h2>
+                <h3>/</h3>
+                <p>One Person</p>
+              </div>
+              <div class="bookPgRating">
+                <div class="ratingStars">
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <p>4.8</p>
+                </div>
+                <div class="ratingReview">
+                  <p class="revCount">44</p>
+                  <p>Reviews</p>
+                </div>
+              </div>
+            </div>
+          </div>
 
-    <div class="reviewsContainer myWrapper">
-      <div class="reviewsHeader">
-        <h4>Reviews</h4>
-        <div class="writeRev">
-          <i class="fa-thin fa-pen-line"></i>
-          <p>Rəy yaz</p>
+          <div class="bookLeftInfo">
+
+            <div class="oneInfo aboutInfo">
+              <div class="infoHeader">
+                <h4>About Me</h4>
+                <i id="aboutChevron" class="fa-regular fa-chevron-down rotate180"></i>
+              </div>
+              <div class="infoDropdown dropdownHide aboutText">
+                <p>Salam</p>
+              </div>
+            </div>
+
+            <div class="oneInfo whyChooseInfo">
+                <div class="infoHeader">
+                  <h4>Why you choose me</h4>
+                  <i id="whyChevron" class="fa-regular fa-chevron-down rotate180"></i>
+                </div>
+                <div class="infoDropdown dropdownHide aboutText">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, dolorum!</p>
+                </div>
+              </div>
+            
+          </div>
         </div>
       </div>
-      <div class="reviewsSection">
-        <!-- One Rview Start  -->
-        <div class="oneReview">
-          <div class="reviewUser">
-            <img src="./images/user.png" alt="" />
-            <h4>Nazrin Nabiyeva</h4>
-          </div>
-          <div class="userComment">
-            <p>
-              Consectetur mattis donec dignissim massa leo quis lorem et. A,
-              ultricies pellentesque ultrices cras nunc tortor elementum vel.
-              Orci ultrices est montes, nisl, fringilla sed natoque interdum.
-              Luctus maecenas tortor ipsum, at rutrum. Suscipit pharetra est
-              eget congue donec dictum pretium.
-            </p>
-          </div>
-        </div>
-        <!-- One Rview End  -->
 
-        <!-- One Rview Start  -->
-
-        <div class="oneReview">
-          <div class="reviewUser">
-            <img src="./images/user.png" alt="" />
-            <h4>Nazrin Nabiyeva</h4>
-          </div>
-          <div class="userComment">
-            <p>
-              Consectetur mattis donec dignissim massa leo quis lorem et. A,
-              ultricies pellentesque ultrices cras nunc tortor elementum vel.
-              Orci ultrices est montes, nisl, fringilla sed natoque interdum.
-              Luctus maecenas tortor ipsum, at rutrum. Suscipit pharetra est
-              eget congue donec dictum pretium.
-            </p>
-          </div>
-        </div>
-        <!-- One Rview End  -->
-      </div>
+      <div class="bookRight"></div>
     </div>
 
     <div class="footerContainer">
@@ -185,6 +178,6 @@
       </div>
     </div>
 
-    <script src="./JS/app.js"></script>
+    <script src="./JS/bookPage.js"></script>
   </body>
 </html>
