--- a/login.html
+++ b/login.html
@@ -58,9 +58,8 @@
           <button class="companyBtn">As Company</button>
         </div>
       </div>
-      <div class="card">
-        <div class="card-inner">
-          <div class="signup-main card-front">
+        
+          <div class="signup-main guideSide">
             <div class="signup-media">
               <a
                 target="_blank"
@@ -111,7 +110,7 @@
             </form>
           </div>
 
-          <div class="signup-main card-back">
+          <div class="signup-main companySide hide">
             <div class="signup-media">
               <a
                 target="_blank"
@@ -161,8 +160,7 @@
               <button class="myBtn">Log in</button>
             </form>
           </div>
-        </div>
-      </div>
+        
     </div>
 
     <div class="footerContainer">
@@ -215,7 +213,6 @@
       </div>
     </div>
 
-    <!-- <script src="app.js"></script> -->
     <script src="./JS/signup.js"></script>
   </body>
 </html>
