--- a/signup.html
+++ b/signup.html
@@ -57,9 +57,8 @@
           <button class="companyBtn">As Company</button>
         </div>
       </div>
-      <div class="card">
-        <div class="card-inner">
-          <div class="signup-main card-front">
+      
+          <div class="signup-main guideSide">
             <div class="signup-media">
               <a
                 target="_blank"
@@ -121,7 +120,7 @@
             </form>
           </div>
 
-          <div class="signup-main card-back">
+          <div class="signup-main companySide hide">
             <div class="signup-media">
               <a
                 target="_blank"
@@ -182,8 +181,7 @@
               <button class="myBtn">Sign Up</button>
             </form>
           </div>
-        </div>
-      </div>
+      
     </div>
 
     <div class="footerContainer">
@@ -236,7 +234,6 @@
       </div>
     </div>
 
-    <!-- <script src="app.js"></script> -->
     <script src="./JS/signup.js"></script>
   </body>
 </html>
