Book Page Finish and SignUp&Login Update

--- a/bookGuide.html
+++ b/bookGuide.html
@@ -59,7 +59,7 @@
       <div class="bookLeft">
         <div class="bookLeftImg">
           <img
-            src="https://images.classic.com/vehicles/89518eb7aa57e6b4c4a08cb4366c7874f36b24da.jpg?auto=format&fit=crop&ar=16:9&w=672&h=576"
+            src="https://images.unsplash.com/photo-1656760128444-be65de47e198?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
             alt=""
           />
         </div>
@@ -100,32 +100,130 @@
           </div>
 
           <div class="bookLeftInfo">
-
-            <div class="oneInfo aboutInfo">
-              <div class="infoHeader">
-                <h4>About Me</h4>
-                <i id="aboutChevron" class="fa-regular fa-chevron-down rotate180"></i>
-              </div>
-              <div class="infoDropdown dropdownHide aboutText">
-                <p>Salam</p>
-              </div>
+            <div class="oneInfo">
+              <ul class="infoHeader">
+                <li>
+                  <h4>About Me</h4>
+                  <i id="aboutChevron" class="fa-regular fa-chevron-down"></i>
+                </li>
+                <p class="infoResponse">
+                  Aliquam dignissimos blanditiis id numquam ipsam sed neque
+                  possimus! Odit commodi, sit sed excepturi nostrum id.
+                  Voluptates unde rerum culpa repellat iste! Lorem ipsum dolor
+                  sit amet, consectetur adipisicing elit. Illo, labore? Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                  fugiat provident. Corrupti sunt rerum nostrum aliquid
+                  praesentium reiciendis dolorum ullam in, a alias, dolore
+                  voluptas maxime quam atque voluptate explicabo perspiciatis
+                  non velit soluta perferendis eligendi nesciunt! Eaque,
+                  expedita consectetur!
+                </p>
+              </ul>
             </div>
 
-            <div class="oneInfo whyChooseInfo">
-                <div class="infoHeader">
-                  <h4>Why you choose me</h4>
-                  <i id="whyChevron" class="fa-regular fa-chevron-down rotate180"></i>
-                </div>
-                <div class="infoDropdown dropdownHide aboutText">
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, dolorum!</p>
-                </div>
-              </div>
-            
+            <div class="oneInfo">
+              <ul class="infoHeader">
+                <li>
+                  <h4>Why you Choose me</h4>
+                  <i id="aboutChevron" class="fa-regular fa-chevron-down"></i>
+                </li>
+                <p class="infoResponse">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis animi tempora quidem eaque vitae mollitia nam commodi dignissimos veritatis, fugiat ea aperiam, a, similique ex odit esse ipsa porro voluptate maxime? Ab repudiandae ut voluptates maxime sequi perspiciatis, reprehenderit necessitatibus nisi nam possimus distinctio alias ipsam earum. Fugiat facilis provident repellat minima, eos corrupti et, labore numquam cumque, unde laudantium earum aut culpa nisi sint atque illo sunt quas distinctio corporis dolor quisquam esse dolore dolorem. Magnam quisquam aut laborum molestiae accusamus nam nemo odit officiis laboriosam consequuntur vero magni aperiam, aspernatur recusandae ex itaque architecto tempore ab eveniet a.
+                </p>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="bookRight"></div>
+      <div class="bookRight">
+        <div class="bookYourGuide">
+          <p>Book Your Guide</p>
+          <div class="dateInput input">
+            <input type="date" placeholder="Select a date" />
+            <!-- <i class="fa-thin fa-calendar-days"></i> -->
+          </div>
+          <div class="timeInput input">
+            <input type="time" placeholder="Select a time" />
+            <!-- <i class="fa-light fa-clock"></i> -->
+          </div>
+          <div class="guestsInput input">
+            <input type="text" placeholder="Guests" />
+            <i class="fa-light fa-users-medical"></i>
+          </div>
+          <div class="languageInput input">
+            <!-- <input type="text" placeholder="Select a language">
+                <i class="fa-light fa-users-medical"></i> -->
+            <label for="languages">Select a language</label>
+            <select name="cars" id="languages">
+              <option value="English">English</option>
+              <option value="Azerbaijan">Azerbaijan</option>
+              <option value="Spanish">Spanish</option>
+              <option value="Spanish">Spanish</option>
+            </select>
+          </div>
+          <button class="myBtn bookGuideBtn">Book Now</button>
+        </div>
+
+        <div class="peopleSay">
+            <p>What people say about me?</p>
+            <div class="onePerson">
+                <div class="topSide">
+                    <div class="person">
+                        <div class="personImg">
+                            <img src="./images/guide.jpg" alt="">
+                        </div>
+                        <p>Nazrin Nabiyeva</p>
+                    </div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <p class="ratingCount">4.8</p>
+                    </div>
+                </div>
+                <div class="bottomSide">
+                    <p>Consectetur mattis donec dignissim massa leo quis lorem et. A, ultricies pellentesque ultrices cras nunc tortor elementum vel. Orci ultrices est montes, nisl</p>
+                </div>
+            </div>
+
+            <div class="onePerson">
+                <div class="topSide">
+                    <div class="person">
+                        <div class="personImg">
+                            <img src="./images/guide.jpg" alt="">
+                        </div>
+                        <p>Nazrin Nabiyeva</p>
+                    </div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <p class="ratingCount">4.8</p>
+                    </div>
+                </div>
+                <div class="bottomSide">
+                    <p>Consectetur mattis donec dignissim massa leo quis lorem et. A, ultricies pellentesque ultrices cras nunc tortor elementum vel. Orci ultrices est montes, nisl</p>
+                </div>
+            </div>
+
+            <div class="onePerson">
+                <div class="topSide">
+                    <div class="person">
+                        <div class="personImg">
+                            <img src="./images/guide.jpg" alt="">
+                        </div>
+                        <p>Nazrin Nabiyeva</p>
+                    </div>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <p class="ratingCount">4.8</p>
+                    </div>
+                </div>
+                <div class="bottomSide">
+                    <p>Consectetur mattis donec dignissim massa leo quis lorem et. A, ultricies pellentesque ultrices cras nunc tortor elementum vel. Orci ultrices est montes, nisl</p>
+                </div>
+            </div>
+
+            <button class="myBtn">See All</button>
+        </div>
+      </div>
     </div>
 
     <div class="footerContainer">
@@ -178,6 +276,7 @@
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="./JS/bookPage.js"></script>
   </body>
 </html>
