sigUp&Login Btn Disable

--- a/signup.html
+++ b/signup.html
@@ -124,6 +124,7 @@
                   <label for="driver">Driver</label>
                 </li>
               </ul>
+              <span id="reqSpan">*Please select one!</span>
             </div>
             <div class="signup-terms">
               <p>
@@ -132,7 +133,7 @@
               </p>
             </div>
             <div class="signUpBtn">
-              <button class="myBtn">Sign up</button>
+              <button id="signBtn" class="myBtn" disabled>Sign up</button>
             </div>
           </form>
         </div>
